# revise

./: .clang-tidy  .gitattributes  .gitignore  .qmlls.ini  CMakeLists.txt  CMakeLists.txt.user.a2250f1  Doxyfile  README.md  pull_db.sh  push_db.sh  revise.db
app/: CMakeLists.txt
app/android/: AndroidManifest.xml
app/include/CardsModel/: CardsModel.hpp
app/include/DeckMediaStorage/: DeckMediaStorage.hpp
app/include/DeckService/: DeckService.hpp
app/include/DecksModel/: DecksModel.hpp
app/include/HtmlHelper/: HtmlHelper.hpp
app/include/IAlgorithm/: IAlgorithm.hpp
app/include/IDeckRepository/: IDeckRepository.hpp
app/include/Launcher/: Launcher.hpp
app/include/SqlDeckRepository/: SqlDeckRepository.hpp
app/include/StudyService/: StudyService.hpp
app/res/html/highlight/: highlight.js
app/src/: main.cpp
app/src/CardsModel/: CardsModel.cpp
app/src/Core/: Core.cpp
app/src/DeckMediaStorage/: DeckMediaStorage.cpp
app/src/DecksModel/: DecksModel.cpp
app/src/ErrorReporter/: ErrorReporter.cpp
app/src/Launcher/: Launcher.cpp
app/src/SM2Algorithm/: SM2Algorithm.cpp
app/src/StudyService/: StudyService.cpp
app/ui/components/: ColorfulProgressbar.qml  PopupBase.qml
app/ui/controls/: Toggle.qml  ValidatedMultilineTextField.qml
app/ui/dialogs/: AddDeckPopup.qml  AddFormulaPopup.qml
app/ui/navigation/: Router.qml
app/ui/pages/: CreateCard.qml  DeckOptions.qml  EditCard.qml  EditDeck.qml  Statistics.qml
modules/core/: CMakeLists.txt
modules/core/include/core/: Card.hpp  Deck.hpp  IAlgorithm.hpp  ICardEditSession.hpp  IDeckExporter.hpp  IDeckImporter.hpp  IDeckMediaStorage.hpp  IDeckRepository.hpp  IDeckService.hpp  IDeckStorage.hpp  IEventRecorder.hpp  IEventStorage.hpp  INotificationService.hpp  IPermissionService.hpp  IPopupService.hpp  IStreakService.hpp  IStreakStorage.hpp  IStudyEngine.hpp  IStudyService.hpp  IToastService.hpp  Notifiable.hpp  Popup.hpp  Property.hpp  Streak.hpp  Version.hpp  Version.hpp.in
modules/engine/: CMakeLists.txt
modules/engine/include/engine/: AlgorithmFactory.hpp  CardEditSessionFactory.hpp  DeckService.hpp  PopupServiceFactory.hpp  SearchEngine.hpp  StreakService.hpp  StreakServiceFactory.hpp  StudyEngine.hpp  StudyService.hpp  ToastServiceFactory.hpp
modules/engine/private_include/: CardEditSession.hpp  PopupService.hpp  SM2Algorithm.hpp  StreakService.hpp  ToastService.hpp
modules/engine/src/: AlgorithmFactory.cpp  CardEditSession.cpp  CardEditSessionFactory.cpp  DeckService.cpp  PopupService.cpp  PopupServiceFactory.cpp  SM2Algorithm.cpp  SearchEngine.cpp  StreakService.cpp  StreakServiceFactory.cpp  StudyEngine.cpp  StudyService.cpp  ToastService.cpp  ToastServiceFactory.cpp
modules/io/: CMakeLists.txt
modules/io/include/io/: Database.hpp  DatabaseExecutionContext.hpp  DeckExporterFactory.hpp  DeckImporterFactory.hpp  DeckMediaStorageFactory.hpp  EventRecorderFactory.hpp  Settings.hpp  SqlDeckStorage.hpp  SqlEventStorage.hpp  SqlStreakStorage.hpp
modules/io/private_include/: AnkiDeckImporter.hpp  DeckMediaStorage.hpp  ReviseDeckExporter.hpp  ReviseDeckImporter.hpp  SqlEventRecorder.hpp
modules/io/src/: AnkiDeckImporter.cpp  Database.cpp  DatabaseExecutionContext.cpp  DeckExporterFactory.cpp  DeckImporterFactory.cpp  DeckMediaStorage.cpp  DeckMediaStorageFactory.cpp  EventRecorderFactory.cpp  ReviseDeckExporter.cpp  ReviseDeckImporter.cpp  Settings.cpp  SqlDeckStorage.cpp  SqlEventRecorder.cpp  SqlEventStorage.cpp  SqlStreakStorage.cpp
modules/platform/: CMakeLists.txt
modules/platform/include/platform/: NotificationServiceFactory.hpp  PermissionServiceFactory.hpp  Platform.hpp
modules/platform/private_include/: AndroidNotificationService.hpp  AndroidPermissionService.hpp  NotificationServiceStub.hpp  PermissionServiceStub.hpp
modules/platform/src/: AndroidNotificationService.cpp  AndroidPermissionService.cpp  NotificationServiceFactory.cpp  NotificationServiceStub.cpp  PermissionServiceFactory.cpp  PermissionServiceStub.cpp
modules/ui/: CMakeLists.txt
modules/ui/include/ui/: CardsModel.hpp  DecksModel.hpp  LoadingScreen.hpp  PopupServiceFactory.hpp  QmlIncubator.hpp  Router.hpp  StudyService.hpp  UI.hpp  UIExport.hpp
modules/ui/private_include/: Card.hpp  CardEditSession.hpp  CardWrapper.hpp  CardsModel.hpp  Deck.hpp  DeckService.hpp  DecksModel.hpp  Popup.hpp  PopupService.hpp  Settings.hpp  StreakService.hpp  StudyService.hpp  ToastService.hpp  UIPlugin.hpp
modules/ui/qml/: App.qml  MainLayout.qml
modules/ui/qml/base/: PopupBase.qml
modules/ui/qml/components/: Background.qml  CardView.qml  CheckupableOption.qml  ColorfulProgressbar.qml  GlassRectangle.qml  Header.qml  HtmlCardEditor.qml  HtmlView.qml  Loader.qml  LoadingScreen.qml  PopupBase.qml  SolidBackground.qml  StatefulIndicator.qml  StreakIndicator.qml  Toolbar.qml  TrainingBar.qml
modules/ui/qml/controls/: AcceptButton.qml  AppText.qml  Button.qml  CheckBoxOption.qml  Checkbox.qml  HoverableTooltip.qml  IconButton.qml  KekabMenu.qml  KekabMenuButton.qml  LoadingIconButton.qml  MenuButton.qml  SearchField.qml  SettingsBlock.qml  TextField.qml  Toast.qml  Tooltip.qml
modules/ui/qml/delegates/: AddDeckDelegate.qml  CardDelegate.qml  DeckDelegate.qml
modules/ui/qml/dialogs/: AddCodeDialog.qml  AddCodePopup.qml  AddDeckDialog.qml  CardEventDialog.qml  CreateDeckDialog.qml  CreateDeckPopup.qml  DeckEventDialog.qml  ScrollableInfoPopup.qml  WrapTextDialog.qml  WrapTextPopup.qml
modules/ui/qml/elements/: BlurOverlay.qml  Icon.qml  KeyValue.qml  Scrollbar.qml  SettingsRow.qml  Spinner.qml  Text.qml  VerticalSpacer.qml
modules/ui/qml/pages/: CardEditor.qml  CardPreview.qml  (+7 more)
modules/ui/src/: CardEditSession.cpp  CardsModel.cpp  DeckService.cpp  DecksModel.cpp  LoadingScreen.cpp  PopupService.cpp  PopupServiceFactory.cpp  QmlIncubator.cpp  Router.cpp  Settings.cpp  StreakService.cpp  StudyService.cpp  ToastService.cpp  UI.cpp
modules/utils/: CMakeLists.txt
modules/utils/src/: Directory.cpp  Html.cpp  ScopeGuard.cpp
tests/: CMakeLists.txt
tests/unit/core/: notifiable_test.cpp
tests/unit/utils/: html_test.cpp
(+163 files in other folders)
